# Pareto_results

./: crosshairs.js  dataLoader.js  deploy.yml  dygraph_handler.js  file_editor.py  index.html  styles.css
.github/workflows/: deploy.yml
M4D2/Data/FTACV-15_Hz-280_mV/: data.txt  times.txt
M4D2/Data/FTACV-3_Hz-280_mV/: data.txt  times.txt
M4D2/Data/FTACV-9_Hz-280_mV/: data.txt  times.txt
M4D2/Data/SWV-100_Hz-anodic/: data.txt
M4D2/Data/SWV-100_Hz-cathodic/: data.txt
M4D2/Data/SWV-115_Hz-anodic/: data.txt
M4D2/Data/SWV-115_Hz-cathodic/: data.txt
M4D2/Data/SWV-125_Hz-anodic/: data.txt
M4D2/Data/SWV-125_Hz-cathodic/: data.txt
M4D2/Data/SWV-135_Hz-anodic/: data.txt
M4D2/Data/SWV-135_Hz-cathodic/: data.txt
M4D2/Data/SWV-145_Hz-anodic/: data.txt
M4D2/Data/SWV-145_Hz-cathodic/: data.txt
M4D2/Data/SWV-150_Hz-anodic/: data.txt
M4D2/Data/SWV-150_Hz-cathodic/: data.txt
M4D2/Data/SWV-175_Hz-anodic/: data.txt
M4D2/Data/SWV-175_Hz-cathodic/: data.txt
M4D2/Data/SWV-200_Hz-anodic/: data.txt
M4D2/Data/SWV-200_Hz-cathodic/: data.txt
M4D2/Data/SWV-300_Hz-anodic/: data.txt  times.txt
M4D2/Data/SWV-300_Hz-cathodic/: data.txt
M4D2/Data/SWV-400_Hz-anodic/: data.txt
M4D2/Data/SWV-400_Hz-cathodic/: data.txt
M4D2/Data/SWV-65_Hz-anodic/: data.txt
M4D2/Scores/: Colour_scores.txt  pareto_parameters.txt  scores.txt
biquad_wasm/: Cargo.toml
biquad_wasm/pkg/: biquad_wasm.d.ts  biquad_wasm.js  biquad_wasm_bg.wasm  biquad_wasm_bg.wasm.d.ts  package.json  rust_wasm_module.js  rust_wasm_module_bg.wasm
biquad_wasm/src/: lib.rs
(+3291 files in other folders)
